# MemAgent

./: .gitignore  Readme.md
backend/: main.py  pyproject.toml
backend/agent-system/: test.py
backend/agent-system/config/: config.py
backend/agent-system/db/: connection.py
backend/agent-system/memory/: memory_manager.py  memory_store.py
backend/agent-system/tools/: toolbox.py  tools.py
backend/agent-system/utils/: utils.py
backend/agent_system/: call_agent.py  config.py  embedding.py  memory_manager.py  memory_store.py  prompt.py  test.py  toolbox.py  tools.py  utils.py
backend/agent_system/db/: connection.py
frontend/: package-lock.json  package.json
frontend/MemAgent/: index.html  package-lock.json  package.json
frontend/MemAgent/src/: App.tsx  index.css
frontend/MemAgent/src/component/: chat.tsx
frontend/MemAgent/src/lib/: agent.api.ts
