[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiopg>=1.4.0",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.3",
    "google-genai>=2.6.0",
    "psycopg2>=2.9.12",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "tavily-python>=0.7.24",
]
